syntax = "proto3";

option csharp_namespace = "TestGrpcInterface";

package testgrpc2;

// The greeting service definition.
service TestGrpc2 {
  // Sends a greeting
  rpc SayHello (TestHelloRequest2) returns (TestHelloReply2);
}

// The request message containing the user's name.
message TestHelloRequest2 {
  string name = 1;
}

// The response message containing the greetings.
message TestHelloReply2 {
  string message = 1;
}
